0.9.17
-----------
- removed obnoxious symlink lookup for fstab entries.

0.9.16
-----------
- added support for fmask and dmask for filesystems that support it,
  based on a patch by Suren A. Chilingaryan <csa@dside.dyndns.org>
- NTFS now uses nls= instead of iocharset=
- support for ntfsmount (via the ntfs-fuse fs type) and ntfs-3g 
  (via ntfs-3g)
- included the patch by Dan Keder <keder@fi.muni.cz> for listing 
  mounted removable devices, in the fashion of mount (with some edits)
- pumount now works with uuids/labels.
- /etc/pmount.allow now supports fully globs (7)

0.9.15
-----------
- fix problems with the missing bus symlink in recent kernels
- now, pmount keeps track of the encrypted volume it did luksOpen, and
  pumount won't luksClose them unless explicitly asked to (with the
  --luks-force option).

0.9.14
-----------
- pmount: support the 'omfs' file system
- applied patch from Tim Phipps <tim@phipps-hutton.freeserve.co.uk> to
  fix pumount when /media is a symlink.
- use errors=continue when applicable to prevent carefully crafted fs 
  to cause kernel panics.
- some typo fixes
- -p is now a shortcut for --passphrase
- document why for some filesystems, pmount makes the kernel complain.
- use the realpath implementation from the mount utility for security
  reasons (man 3 realpath says 'Avoid using this function.')
- pulling recent translations from Rosetta; adding (partial)
  translations for: 
  * Basque
  * Persian
  * Norwegian
  * Telugu
  * Turkish

0.9.13
------
- pmount-hal: minor change to build with dbus 0.91
- pmount: if pmount is installed setgid, use pmount's group for gid mount
  option, otherwise use the user's group, as usual (patch from Wilhelm Meier
  <wilhelm.meier@fh-kl.de>)
- pmount: consider devices on pcmcia bus as hotpluggable (and thus pmountable)
- fix automake file to ship README.devel
- fix default path of /etc/pmount.allow (regression from 0.9.12)
- update translations from Rosetta