@@ -24,7 +24,7 @@ AC_CHECK_HEADER(sysfs/libsysfs.h,
 
 AC_CHECK_HEADER(blkid/blkid.h,
 	[AC_CHECK_LIB(blkid, blkid_get_cache,
-		[LIBS="$LIBS -lsysfs"],
+		[LIBS="$LIBS -lblkid"],
 		[AC_MSG_WARN([Missing blkid library: you will not have fs autodetection (install libblkid-dev or similar?)])])],
 	[AC_MSG_WARN([Missing /usr/include/blkid/blkid.h: you will not have fs autodetection (install libblkid-dev or similar?)])])
 
